--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -27,7 +27,13 @@
   --clr-Pale-blue: hsl(221, 100%, 96%);
   --clr-Light-lavender: hsl(241, 100%, 89%);
   --clr-Dark-gray-blue: hsl(224, 30%, 27%);
+
+  --border-radius: 30px;
 }
+
+// Screen sizes
+$bp-small: 37.5em; // 600px
+
 body {
   font-family: "Hanken Grotesk", sans-serif;
   font-size: 1.1rem;
@@ -37,8 +43,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: calc(100vh - 101.6px);
 }
 
 .main-contents {
-  box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.1);
+  display: grid;
+  grid-template-columns: 1fr;
+
+  @media screen and (min-width: $bp-small) {
+    grid-template-columns: 1fr 1fr;
+    max-width: 45rem;
+    border-radius: var(--border-radius);
+    box-shadow: 10px 10px 15px 10px rgba(0, 0, 0, 0.1);
+  }
 }
