--- a/sass/_result-view.scss
+++ b/sass/_result-view.scss
@@ -4,8 +4,7 @@
     var(--clr-Light-slate-blue),
     var(--clr-Light-royal-blue)
   );
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
+  border-radius: 0 0 var(--border-radius) var(--border-radius);
 
   display: flex;
   flex-direction: column;
@@ -15,6 +14,10 @@
   color: var(--clr-White);
   padding: 2rem;
   text-align: center;
+
+  @media screen and (min-width: $bp-small) {
+    border-radius: var(--border-radius);
+  }
 
   &__heading {
     font-size: 1.1rem;
