Updated readme and inproved ovarall quality

--- a/sass/_attribution.scss
+++ b/sass/_attribution.scss
@@ -2,6 +2,7 @@
   --fs-attb: 13px;
   --clr-attb-primary: var(--clr-Green-teal);
   --clr-attb-secondary: var(--clr-Violet-blue);
+  color: var(--clr-Black);
   text-align: center;
   line-height: 2;
   font-size: var(--fs-attb);
