--- a/sass/_summery-view.scss
+++ b/sass/_summery-view.scss
@@ -3,7 +3,8 @@
 
   &__heading {
     font-size: 1.1rem;
-    color: var(--clr-Dark-gray-blue);
+    color: var(--clr-Black);
+    opacity: 0.7;
     margin-bottom: 2rem;
   }
 
@@ -25,6 +26,7 @@
       border-radius: 10px;
 
       &__score {
+        color: var(--clr-Black);
         span {
           opacity: 0.5;
         }
